--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: ICNB'18 - 3rd International Conference on Nanobiotechnology
-meta: 3rd International Conference on Nanobiotechnology (ICNB'18).
+meta: 3rd International Conference on Nanobiotechnology (ICNB 2018). This conference covers different topics such as Nanobiomedicine, Nanobiomechanics, Nanobiosystems, Nanobio Based Devices, Nanobio Imaging, Nanobio Sensors, Nanotechnology and Agriculture, Nanotechnology and Drug Delivery, Self-assembly.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
