--- a/events.html
+++ b/events.html
@@ -15,12 +15,12 @@ meta: Information provided to organize an exhibition or workshop under the umbre
             <li>An additional €300.00 for each accompanying person</li>
         </ul>
 
-      <p class="body bold">Booth exhibit, €1500:</p>
+      <!-- <p class="body bold">Booth exhibit, €1500:</p>
         <ul>
             <li>A booth setup for 1 conference day</li>
             <li>1 free registration for the personnel from the institute</li>
             <li>An additional €300.00 for each accompanying person</li>
-        </ul>
+        </ul> -->
 
 
       <p class="body">The exhibit provides a platform for companies and institutions to present their products and distribute brochures and business cards. The exhibit also provides a unique networking opportunity with many experts and researchers in the field of nanobiotechnology.</p>
