--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ meta: 3rd International Conference on Nanobiotechnology (ICNB'19).
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+  
+    <p class="announcement-text" align="center" style="color:#69A875"><strong>The conference proceedings of this conference will be indexed by Scopus and Google Scholar.</strong></p>
+    
     <p class="body"><strong>The 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) aims to become the leading annual conference in fields related to nanobiotechnology.</strong> The goal of ICNB'19 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body"><b>ICNB</b> is an acronym for <B>I</b>nternational <b>C</b>onference on <b>N</b>anobiotechnology.</p>
