--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ meta: 3rd International Conference on Nanobiotechnology (ICNB'19).
 
 
      <br>
-    <!--<h2>Paper Topics</h2>
+    <h2>Paper Topics</h2>
       <p class="body">ICNB'19 is now accepting papers on the following topics.</p>
       <ul class="topics">
       <li>Bionanocatalysis</li>
@@ -42,7 +42,7 @@ meta: 3rd International Conference on Nanobiotechnology (ICNB'19).
       <li>Nanotechnology and Drug Delivery</li>
       </ul>
       <p class="body">For a complete list of the paper topics, please visit: <a href="/papers" class="body-link">Submissions</a>.</p>
--->
+
 
 
 <!-- <h2>Keynote Speakers:</h2>
